2013-06-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-map): Bind [down-mouse-1] to browse URLs.

2013-06-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-parse-entries): Remove debugging.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-make-table-1): Implement <td rowspan>.
	(shr-table-horizontal-line): Allow nil as a value, and change the
	default.
	(shr-insert-table-ruler): Respect the nil value.

2013-06-18  Tom Tromey  <tromey@barimba>

	* eww.el (eww-next-url, eww-previous-url, eww-up-url, eww-top-url):
	New defvars.
	(eww-open-file): New defun.
	(eww-render): Initialize new variables.
	(eww-display-html): Handle "link" and "a".
	(eww-handle-link, eww-tag-link, eww-tag-a): New defuns.
	(eww-mode-map): Move "p" to "l".  Bind "p", "n", "t", and "u".
	(eww-back-url): Rename from eww-previous-url.
	(eww-next-url, eww-previous-url, eww-up-url, eww-top-url): New
	defuns.

2013-06-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-table): Insert the images after the table, so that
	they're not covered by the table colourisation, which often looked
	awkward.
	(shr-tag-dl, shr-tag-dt, shr-tag-dd): Add support for <dl>, <dt> and
	<dd>.
	(shr-make-table-1): Implement <td colspan=> support.
	(shr-insert-document): Use one less than window width if `shr-width' is
	nil, since otherwise things may get one character too wide.

2013-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eww.el (eww-detect-charset): Improve regexp; move backward.

2013-06-18  Glenn Morris  <rgm@gnu.org>

	* mm-decode.el (widget-convert-button): Autoload.

	* sieve-manage.el (mm-enable-multibyte): Autoload.

	* shr.el (libxml-parse-html-region): Declare.
	(shr-render-buffer): Explicit error if no libxml2 support.

2013-06-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-current-line): New function.
	(auth-source-netrc-parse-entries): When a data token is "machine",